<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FamilyRobot</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="welcome_word">Family Robot Terminal Based on Android</string>
	<string name="user_name">用户名:</string>
	<string name="user_name_hint">请输入用户名</string>
	<string name="password">密码:</string>
	<string name="password_hint">请输入密码</string>
	<string name="ok">登录</string>
	<string name="cancel">取消</string>
	<string name="wifi_connect">WIFI连接</string>
	<string name="bluetooth_connect">蓝牙连接</string>
	<string name="exit">退出</string>
	<string name="mutual">手动</string>
	<string name="hide">壁障</string>
	<string name="follow">循迹</string>
</resources>
