<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TableLayout 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center">
        
        <TableRow 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="20sp"
                android:textColor="#000000"/>
            <EditText 
                android:id="@+id/edit_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/user_name_hint"
                android:textSize="18sp"/>
        </TableRow>
        
        <TableRow 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="20sp"
                android:textColor="#000000"/>
            <EditText 
                android:id="@+id/edit_password"
                android:inputType="textPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:textSize="18sp"/>
        </TableRow>
         <TableRow 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button 
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>
            <Button 
                android:id="@+id/button_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"/>
        </TableRow>
    </TableLayout>

</FrameLayout>
