<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    
    <Button 
        android:id="@+id/btn_wifi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/wifi_connect"
        android:textSize="20sp"
        android:textColor="#000000"/>
    <Button 
        android:id="@+id/btn_bluetooth"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/bluetooth_connect"
        android:textSize="20sp"
        android:textColor="#000000"/>
    
    <Button android:id="@+id/btn_exit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/exit"
        android:textSize="20sp"
        android:textColor="#000000"/>

</LinearLayout>
